<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/widget_quick_actions_root"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/home_widget_background"
  android:gravity="center"
  android:orientation="horizontal"
  android:padding="6dp">

  <FrameLayout
    android:id="@+id/widget_action_note"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_marginEnd="5dp"
    android:layout_weight="1"
    android:background="@drawable/home_widget_action_note"
    android:contentDescription="@string/widget_note_name">

    <ImageView
      android:layout_width="26dp"
      android:layout_height="26dp"
      android:layout_gravity="center"
      android:contentDescription="@string/widget_note_name"
      android:src="@drawable/ic_widget_note" />

    <ImageView
      android:layout_width="17dp"
      android:layout_height="17dp"
      android:layout_gravity="top|end"
      android:background="@drawable/home_widget_plus_badge"
      android:contentDescription="@string/widget_add_badge"
      android:padding="3dp"
      android:src="@drawable/ic_widget_plus" />
  </FrameLayout>

  <FrameLayout
    android:id="@+id/widget_action_event"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_marginEnd="5dp"
    android:layout_weight="1"
    android:background="@drawable/home_widget_action_event"
    android:contentDescription="@string/widget_event_name">

    <ImageView
      android:layout_width="26dp"
      android:layout_height="26dp"
      android:layout_gravity="center"
      android:contentDescription="@string/widget_event_name"
      android:src="@drawable/ic_widget_calendar" />

    <ImageView
      android:layout_width="17dp"
      android:layout_height="17dp"
      android:layout_gravity="top|end"
      android:background="@drawable/home_widget_plus_badge"
      android:contentDescription="@string/widget_add_badge"
      android:padding="3dp"
      android:src="@drawable/ic_widget_plus" />
  </FrameLayout>

  <FrameLayout
    android:id="@+id/widget_action_expense"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_marginEnd="5dp"
    android:layout_weight="1"
    android:background="@drawable/home_widget_action_expense"
    android:contentDescription="@string/widget_expense_name">

    <ImageView
      android:layout_width="26dp"
      android:layout_height="26dp"
      android:layout_gravity="center"
      android:contentDescription="@string/widget_expense_name"
      android:src="@drawable/ic_widget_expense" />

    <ImageView
      android:layout_width="17dp"
      android:layout_height="17dp"
      android:layout_gravity="top|end"
      android:background="@drawable/home_widget_plus_badge"
      android:contentDescription="@string/widget_add_badge"
      android:padding="3dp"
      android:src="@drawable/ic_widget_plus" />
  </FrameLayout>

  <FrameLayout
    android:id="@+id/widget_action_shopping"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_marginEnd="5dp"
    android:layout_weight="1"
    android:background="@drawable/home_widget_action_shopping"
    android:contentDescription="@string/widget_shopping_name">

    <ImageView
      android:layout_width="26dp"
      android:layout_height="26dp"
      android:layout_gravity="center"
      android:contentDescription="@string/widget_shopping_name"
      android:src="@drawable/ic_widget_shopping" />

    <ImageView
      android:layout_width="17dp"
      android:layout_height="17dp"
      android:layout_gravity="top|end"
      android:background="@drawable/home_widget_plus_badge"
      android:contentDescription="@string/widget_add_badge"
      android:padding="3dp"
      android:src="@drawable/ic_widget_plus" />
  </FrameLayout>

  <FrameLayout
    android:id="@+id/widget_action_todo"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/home_widget_action_todo"
    android:contentDescription="@string/widget_todo_name">

    <ImageView
      android:layout_width="26dp"
      android:layout_height="26dp"
      android:layout_gravity="center"
      android:contentDescription="@string/widget_todo_name"
      android:src="@drawable/ic_widget_todo" />

    <ImageView
      android:layout_width="17dp"
      android:layout_height="17dp"
      android:layout_gravity="top|end"
      android:background="@drawable/home_widget_plus_badge"
      android:contentDescription="@string/widget_add_badge"
      android:padding="3dp"
      android:src="@drawable/ic_widget_plus" />
  </FrameLayout>
</LinearLayout>
